archive/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    gethomepage.dev/description: Longhorn dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/name: Longhorn
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - longhorn.dev.wdalgleish.com
      secretName: longhorn-tls
  rules:
    - host: longhorn.dev.wdalgleish.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  name: http
